<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_15sdp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_25sdp">

        <LinearLayout
            android:layout_margin="@dimen/_3sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/done" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/yeay_welcome_back"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_light"
                android:gravity="center"
                android:text="@string/once_again_you_login_successfully_into_medidoc_app"
                android:textColor="@color/edit_text_color"
                android:textFontWeight="700"
                android:textSize="@dimen/_16sdp" />


            <LinearLayout
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_2"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/button_background"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_15sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:text="@string/go_to_home"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>