<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:id="@+id/back_arrow"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="@dimen/_20sdp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_4"
            android:layout_below="@id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_25sdp">

            <LinearLayout
                android:background="@drawable/edit_background"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/user" />

                <EditText
                    android:padding="@dimen/_7sdp"
                    android:textColorHint="@color/edit_text_color"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:textSize="@dimen/_16sdp"
                    android:background="@color/light_gray"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_below="@id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15sdp">

            <LinearLayout
                android:background="@drawable/edit_background"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/sms" />

                <EditText
                    android:padding="@dimen/_7sdp"
                    android:textColorHint="@color/edit_text_color"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:textSize="@dimen/_16sdp"
                    android:background="@color/light_gray"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_3"
            android:layout_below="@id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15sdp">

            <LinearLayout
                android:background="@drawable/edit_background"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/lock" />

                <EditText
                    android:padding="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:textColorHint="@color/edit_text_color"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textSize="@dimen/_16sdp"
                    android:background="@color/light_gray"
                    android:layout_marginStart="@dimen/_10sdp"/>

                <ImageView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/password"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/eye_slash"
                    />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="top"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/inter_light"
                            android:text="I agree to the medidoc"
                            android:textFontWeight="700"
                            android:textSize="@dimen/_11sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/inter_light"
                            android:text="Terms An Condition "
                            android:textFontWeight="700"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_11sdp"
                            app:layout_constraintStart_toEndOf="@+id/textView" />

                        <TextView
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/inter_light"
                            android:text="and"
                            android:textFontWeight="700"
                            android:textSize="@dimen/_13sdp"
                            app:layout_constraintEnd_toEndOf="parent" />


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_light"
                    android:text="Privacy Policy"
                    android:textFontWeight="700"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp"
                  />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn"
            android:layout_below="@id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_light"
                android:text="Already Have an account "
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="@color/black_light"
                android:textFontWeight="700"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/go_to_signup"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_regular"
                android:text="@string/login"
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="700"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>